deploy/kustomize/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
        image: default-route-openshift-image-registry.apps-crc.testing/bpce-dev/container-tools-api:dev
