deploy/kustomize/overlays/dev/patch-route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend
spec:
  host: backend-dev.apps-crc.testing
